@@ -16,39 +16,43 @@
 
 package dagger.internal.codegen.binding;
 
-import static dagger.internal.codegen.base.Suppliers.memoizeInt;
+import static dagger.internal.codegen.xprocessing.XElement.isMethod;
+import static dagger.internal.codegen.xprocessing.XType.isVoid;
+import static dagger.internal.codegen.xprocessing.XConverters.toJavac;
+import static dagger.internal.codegen.base.Preconditions.checkArgument;
+import static dagger.internal.codegen.base.Preconditions.checkNotNull;
+import static dagger.internal.codegen.base.Preconditions.checkState;
 import static dagger.internal.codegen.extension.DaggerStreams.toImmutableMap;
 import static dagger.internal.codegen.extension.DaggerStreams.toImmutableSet;
-import static dagger.internal.codegen.xprocessing.XConverters.toJavac;
-import static dagger.internal.codegen.xprocessing.XType.isVoid;
+import static dagger.internal.codegen.langmodel.DaggerTypes.isFutureType;
+import static dagger.internal.codegen.langmodel.DaggerTypes.isTypeOf;
 import static dagger.internal.codegen.xprocessing.XTypes.isPrimitive;
-import static java.util.Objects.requireNonNull;
 import static javax.lang.model.type.TypeKind.VOID;
 
-import dagger.Component;
-import dagger.Module;
-import dagger.Subcomponent;
-import dagger.internal.codegen.base.ComponentAnnotation;
-import dagger.internal.codegen.base.Preconditions;
-import dagger.internal.codegen.base.Suppliers;
-import dagger.internal.codegen.collect.ImmutableSet;
-import dagger.internal.codegen.langmodel.DaggerElements;
-import dagger.internal.codegen.langmodel.DaggerTypes;
 import dagger.internal.codegen.xprocessing.XElement;
 import dagger.internal.codegen.xprocessing.XMethodElement;
 import dagger.internal.codegen.xprocessing.XType;
 import dagger.internal.codegen.xprocessing.XTypeElement;
+import io.jbock.auto.value.AutoValue;
+import io.jbock.auto.value.extension.memoized.Memoized;
+import java.util.function.Supplier;
+import dagger.internal.codegen.base.Suppliers;
+import dagger.internal.codegen.collect.ImmutableBiMap;
+import dagger.internal.codegen.collect.ImmutableMap;
+import dagger.internal.codegen.collect.ImmutableSet;
+import dagger.internal.codegen.collect.Maps;
+import io.jbock.javapoet.TypeName;
+import dagger.Component;
+import dagger.Module;
+import dagger.Subcomponent;
+import dagger.internal.codegen.base.ComponentAnnotation;
+import dagger.internal.codegen.langmodel.DaggerTypes;
 import dagger.spi.model.DependencyRequest;
 import dagger.spi.model.Scope;
-import io.jbock.javapoet.TypeName;
-import java.util.LinkedHashMap;
-import java.util.LinkedHashSet;
+import java.util.HashMap;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.Set;
-import java.util.function.IntSupplier;
-import java.util.function.Supplier;
 import java.util.stream.Stream;
 import javax.lang.model.element.ExecutableElement;
 import javax.lang.model.type.TypeMirror;
@@ -59,51 +63,112 @@ import javax.lang.model.type.TypeMirror;
  * <p>Represents one type annotated with {@code @Component}, {@code Subcomponent},
  * {@code @ProductionComponent}, or {@code @ProductionSubcomponent}.
  *
- * <p>When validating bindings installed in modules, a {@link ComponentDescriptor} can also
+ * <p>When validating bindings installed in modules, a {@code ComponentDescriptor} can also
  * represent a synthetic component for the module, where there is an entry point for each binding in
  * the module.
  */
-public final class ComponentDescriptor {
-
-  private final ComponentAnnotation annotation;
-  private final XTypeElement typeElement;
-  private final Set<ComponentRequirement> dependencies;
-  private final Set<ModuleDescriptor> modules;
-  private final Map<XMethodElement, ComponentRequirement> dependenciesByDependencyMethod;
-  private final Set<Scope> scopes;
-  private final Set<ComponentDescriptor> childComponentsDeclaredByModules;
-  private final Map<ComponentDescriptor.ComponentMethodDescriptor, ComponentDescriptor> childComponentsDeclaredByFactoryMethods;
-  private final Map<ComponentDescriptor.ComponentMethodDescriptor, ComponentDescriptor> childComponentsDeclaredByBuilderEntryPoints;
-  private final Set<ComponentDescriptor.ComponentMethodDescriptor> componentMethods;
-  private final Optional<ComponentCreatorDescriptor> creatorDescriptor;
-
-  ComponentDescriptor(
-      ComponentAnnotation annotation,
-      XTypeElement typeElement,
-      Set<ComponentRequirement> dependencies,
-      Set<ModuleDescriptor> modules,
-      Map<XMethodElement, ComponentRequirement> dependenciesByDependencyMethod,
-      Set<Scope> scopes,
-      Set<ComponentDescriptor> childComponentsDeclaredByModules,
-      Map<ComponentMethodDescriptor, ComponentDescriptor> childComponentsDeclaredByFactoryMethods,
-      Map<ComponentMethodDescriptor, ComponentDescriptor> childComponentsDeclaredByBuilderEntryPoints,
-      Set<ComponentMethodDescriptor> componentMethods,
-      Optional<ComponentCreatorDescriptor> creatorDescriptor) {
-    this.annotation = requireNonNull(annotation);
-    this.typeElement = requireNonNull(typeElement);
-    this.dependencies = requireNonNull(dependencies);
-    this.modules = requireNonNull(modules);
-    this.dependenciesByDependencyMethod = requireNonNull(dependenciesByDependencyMethod);
-    this.scopes = requireNonNull(scopes);
-    this.childComponentsDeclaredByModules = requireNonNull(childComponentsDeclaredByModules);
-    this.childComponentsDeclaredByFactoryMethods = requireNonNull(childComponentsDeclaredByFactoryMethods);
-    this.childComponentsDeclaredByBuilderEntryPoints = requireNonNull(childComponentsDeclaredByBuilderEntryPoints);
-    this.componentMethods = requireNonNull(componentMethods);
-    this.creatorDescriptor = requireNonNull(creatorDescriptor);
+@AutoValue
+public abstract class ComponentDescriptor {
+  /** Creates a {@code ComponentDescriptor}. */
+  static ComponentDescriptor create(
+      ComponentAnnotation componentAnnotation,
+      XTypeElement component,
+      ImmutableSet<ComponentRequirement> componentDependencies,
+      ImmutableSet<ModuleDescriptor> transitiveModules,
+      ImmutableMap<XMethodElement, ComponentRequirement> dependenciesByDependencyMethod,
+      ImmutableSet<Scope> scopes,
+      ImmutableSet<ComponentDescriptor> subcomponentsFromModules,
+      ImmutableBiMap<ComponentMethodDescriptor, ComponentDescriptor> subcomponentsByFactoryMethod,
+      ImmutableBiMap<ComponentMethodDescriptor, ComponentDescriptor> subcomponentsByBuilderMethod,
+      ImmutableSet<ComponentMethodDescriptor> componentMethods,
+      Optional<ComponentCreatorDescriptor> creator) {
+    ComponentDescriptor descriptor =
+        new AutoValue_ComponentDescriptor(
+            componentAnnotation,
+            component,
+            componentDependencies,
+            transitiveModules,
+            dependenciesByDependencyMethod,
+            scopes,
+            subcomponentsFromModules,
+            subcomponentsByFactoryMethod,
+            subcomponentsByBuilderMethod,
+            componentMethods,
+            creator);
+    return descriptor;
   }
 
-  private final Supplier<Set<ComponentRequirement>> requirements = Suppliers.memoize(() -> {
-    Set<ComponentRequirement> requirements = new LinkedHashSet<>();
+  /** The annotation that specifies that {@code #typeElement()} is a component. */
+  public abstract ComponentAnnotation annotation();
+
+  /** Returns {@code true} if this is a subcomponent. */
+  public final boolean isSubcomponent() {
+    return annotation().isSubcomponent();
+  }
+
+  /**
+   * Returns {@code true} if this is a production component or subcomponent, or a
+   * {@code @ProducerModule} when doing module binding validation.
+   */
+  public final boolean isProduction() {
+    return annotation().isProduction();
+  }
+
+  /**
+   * Returns {@code true} if this is a real component, and not a fictional one used to validate
+   * module bindings.
+   */
+  public final boolean isRealComponent() {
+    return annotation().isRealComponent();
+  }
+
+  /**
+   * The element that defines the component. This is the element to which the {@code #annotation()}
+   * was applied.
+   */
+  public abstract XTypeElement typeElement();
+
+  /**
+   * The set of component dependencies listed in {@code Component#dependencies} or {@code
+   * dagger.producers.ProductionComponent#dependencies()}.
+   */
+  public abstract ImmutableSet<ComponentRequirement> dependencies();
+
+  /** The non-abstract {@code #modules()} and the {@code #dependencies()}. */
+  public final ImmutableSet<ComponentRequirement> dependenciesAndConcreteModules() {
+    return Stream.concat(
+            moduleTypes().stream()
+                .filter(dep -> !dep.isAbstract())
+                .map(module -> ComponentRequirement.forModule(module.getType())),
+            dependencies().stream())
+        .collect(toImmutableSet());
+  }
+
+  /**
+   * The {@code ModuleDescriptor modules} declared in {@code Component#modules()} and reachable by
+   * traversing {@code Module#includes()}.
+   */
+  public abstract ImmutableSet<ModuleDescriptor> modules();
+
+  /** The types of the {@code #modules()}. */
+  public final ImmutableSet<XTypeElement> moduleTypes() {
+    return modules().stream().map(ModuleDescriptor::moduleElement).collect(toImmutableSet());
+  }
+
+  /**
+   * The types for which the component will need instances if all of its bindings are used. For the
+   * types the component will need in a given binding graph, use {@code
+   * BindingGraph#componentRequirements()}.
+   *
+   * <ul>
+   *   <li>{@code #modules()} modules} with concrete instance bindings
+   *   <li>Bound instances
+   *   <li>{@code #dependencies() dependencies}
+   * </ul>
+   */
+  @Memoized
+  ImmutableSet<ComponentRequirement> requirements() {
+    ImmutableSet.Builder<ComponentRequirement> requirements = ImmutableSet.builder();
     modules().stream()
         .filter(
             module ->
@@ -114,196 +179,117 @@ public final class ComponentDescriptor {
     requirements.addAll(
         creatorDescriptor()
             .map(ComponentCreatorDescriptor::boundInstanceRequirements)
-            .orElse(Set.of()));
-    return requirements;
-  });
-
-  private final Supplier<Map<BindingRequest, ComponentMethodDescriptor>> firstMatchingComponentMethods = Suppliers.memoize(() -> {
-    Map<BindingRequest, ComponentMethodDescriptor> methods = new LinkedHashMap<>();
-    for (ComponentMethodDescriptor method : entryPointMethods()) {
-      methods.putIfAbsent(BindingRequest.bindingRequest(method.dependencyRequest().orElseThrow()), method);
-    }
-    return methods;
-  });
-
-  /** The annotation that specifies that {@link #typeElement()} is a component. */
-  public ComponentAnnotation annotation() {
-    return annotation;
-  }
-
-  /** Returns {@code true} if this is a subcomponent. */
-  public boolean isSubcomponent() {
-    return annotation().isSubcomponent();
+            .orElse(ImmutableSet.of()));
+    return requirements.build();
   }
 
   /**
-   * Returns {@code true} if this is a real component, and not a fictional one used to validate
-   * module bindings.
-   */
-  public boolean isRealComponent() {
-    return annotation().isRealComponent();
-  }
-
-  /**
-   * The element that defines the component. This is the element to which the {@link #annotation()}
-   * was applied.
-   */
-  public XTypeElement typeElement() {
-    return typeElement;
-  }
-
-  /**
-   * The set of component dependencies listed in {@link Component#dependencies}.
-   */
-  public Set<ComponentRequirement> dependencies() {
-    return dependencies;
-  }
-
-  /** The non-abstract {@link #modules()} and the {@link #dependencies()}. */
-  public ImmutableSet<ComponentRequirement> dependenciesAndConcreteModules() {
-    return Stream.concat(
-            moduleTypes().stream()
-                .filter(dep -> !dep.isAbstract())
-                .map(module -> ComponentRequirement.forModule(module.getType())),
-            dependencies().stream())
-        .collect(toImmutableSet());
-  }
-
-  /**
-   * The {@link ModuleDescriptor modules} declared in {@link Component#modules()} and reachable by
-   * traversing {@link Module#includes()}.
-   */
-  public Set<ModuleDescriptor> modules() {
-    return modules;
-  }
-
-  /** The types of the {@link #modules()}. */
-  public Set<XTypeElement> moduleTypes() {
-    return modules().stream().map(ModuleDescriptor::moduleElement).collect(toImmutableSet());
-  }
-
-  /**
-   * The types for which the component will need instances if all of its bindings are used. For the
-   * types the component will need in a given binding graph, use {@link
-   * BindingGraph#componentRequirements()}.
-   *
-   * <ul>
-   *   <li>{@linkplain #modules()} modules} with concrete instance bindings
-   *   <li>Bound instances
-   *   <li>{@linkplain #dependencies() dependencies}
-   * </ul>
-   */
-  Set<ComponentRequirement> requirements() {
-    return requirements.get();
-  }
-
-  /**
-   * This component's {@linkplain #dependencies() dependencies} keyed by each provision or
+   * This component's {@code #dependencies() dependencies} keyed by each provision or
    * production method defined by that dependency. Note that the dependencies' types are not simply
    * the enclosing type of the method; a method may be declared by a supertype of the actual
    * dependency.
    */
-  public Map<XMethodElement, ComponentRequirement> dependenciesByDependencyMethod() {
-    return dependenciesByDependencyMethod;
-  }
+  public abstract ImmutableMap<XMethodElement, ComponentRequirement>
+      dependenciesByDependencyMethod();
 
-  /** The {@linkplain #dependencies() component dependency} that defines a method. */
-  public ComponentRequirement getDependencyThatDefinesMethod(XElement method) {
-    Preconditions.checkArgument(
-        method instanceof XMethodElement, "method must be an executable element: %s", method);
-    return requireNonNull(
-        dependenciesByDependencyMethod().get(method), () -> String.format("no dependency implements %s", method));
+  /** The {@code #dependencies() component dependency} that defines a method. */
+  public final ComponentRequirement getDependencyThatDefinesMethod(XElement method) {
+    checkArgument(isMethod(method), "method must be an executable element: %s", method);
+    checkState(
+        dependenciesByDependencyMethod().containsKey(method),
+        "no dependency implements %s",
+        method);
+    return dependenciesByDependencyMethod().get(method);
   }
 
   /** The scopes of the component. */
-  public Set<Scope> scopes() {
-    return scopes;
-  }
+  public abstract ImmutableSet<Scope> scopes();
 
   /**
-   * All {@link Subcomponent}s which are direct children of this component. This includes
-   * subcomponents installed from {@link Module#subcomponents()} as well as subcomponent {@linkplain
-   * #childComponentsDeclaredByFactoryMethods() factory methods} and {@linkplain
+   * All {@code Subcomponent}s which are direct children of this component. This includes
+   * subcomponents installed from {@code Module#subcomponents()} as well as subcomponent {@code
+   * #childComponentsDeclaredByFactoryMethods() factory methods} and {@code
    * #childComponentsDeclaredByBuilderEntryPoints() builder methods}.
    */
-  public Set<ComponentDescriptor> childComponents() {
-    Set<ComponentDescriptor> result = new LinkedHashSet<>();
-    result.addAll(childComponentsDeclaredByFactoryMethods().values());
-    result.addAll(childComponentsDeclaredByBuilderEntryPoints().values());
-    result.addAll(childComponentsDeclaredByModules());
-    return result;
+  public final ImmutableSet<ComponentDescriptor> childComponents() {
+    return ImmutableSet.<ComponentDescriptor>builder()
+        .addAll(childComponentsDeclaredByFactoryMethods().values())
+        .addAll(childComponentsDeclaredByBuilderEntryPoints().values())
+        .addAll(childComponentsDeclaredByModules())
+        .build();
   }
 
   /**
-   * All {@linkplain Subcomponent direct child} components that are declared by a {@linkplain
+   * All {@code Subcomponent direct child} components that are declared by a {@code
    * Module#subcomponents() module's subcomponents}.
    */
-  Set<ComponentDescriptor> childComponentsDeclaredByModules() {
-    return childComponentsDeclaredByModules;
-  }
+  abstract ImmutableSet<ComponentDescriptor> childComponentsDeclaredByModules();
 
   /**
-   * All {@linkplain Subcomponent direct child} components that are declared by a subcomponent
+   * All {@code Subcomponent direct child} components that are declared by a subcomponent
    * factory method.
    */
-  public Map<ComponentDescriptor.ComponentMethodDescriptor, ComponentDescriptor>
-  childComponentsDeclaredByFactoryMethods() {
-    return childComponentsDeclaredByFactoryMethods;
+  public abstract ImmutableBiMap<ComponentMethodDescriptor, ComponentDescriptor>
+      childComponentsDeclaredByFactoryMethods();
+
+  /** Returns a map of {@code #childComponents()} indexed by {@code #typeElement()}. */
+  @Memoized
+  public ImmutableMap<XTypeElement, ComponentDescriptor> childComponentsByElement() {
+    return Maps.uniqueIndex(childComponents(), ComponentDescriptor::typeElement);
   }
 
   /** Returns the factory method that declares a child component. */
-  Optional<ComponentMethodDescriptor> getFactoryMethodForChildComponent(
+  final Optional<ComponentMethodDescriptor> getFactoryMethodForChildComponent(
       ComponentDescriptor childComponent) {
-    return childComponentsDeclaredByFactoryMethods().entrySet()
-        .stream()
-        .filter(e -> e.getValue().equals(childComponent))
-        .map(Map.Entry::getKey)
-        .findFirst();
+    return Optional.ofNullable(
+        childComponentsDeclaredByFactoryMethods().inverse().get(childComponent));
   }
 
   /**
-   * All {@linkplain Subcomponent direct child} components that are declared by a subcomponent
+   * All {@code Subcomponent direct child} components that are declared by a subcomponent
    * builder method.
    */
-  Map<ComponentDescriptor.ComponentMethodDescriptor, ComponentDescriptor>
-  childComponentsDeclaredByBuilderEntryPoints() {
-    return childComponentsDeclaredByBuilderEntryPoints;
-  }
+  abstract ImmutableBiMap<ComponentMethodDescriptor, ComponentDescriptor>
+      childComponentsDeclaredByBuilderEntryPoints();
 
-  private final Supplier<Map<XTypeElement, ComponentDescriptor>>
+  private final Supplier<ImmutableMap<XTypeElement, ComponentDescriptor>>
       childComponentsByBuilderType =
-      Suppliers.memoize(
-          () ->
-              childComponents().stream()
-                  .filter(child -> child.creatorDescriptor().isPresent())
-                  .collect(
-                      toImmutableMap(
-                          child -> child.creatorDescriptor().orElseThrow().typeElement(),
-                          child -> child)));
+          Suppliers.memoize(
+              () ->
+                  childComponents().stream()
+                      .filter(child -> child.creatorDescriptor().isPresent())
+                      .collect(
+                          toImmutableMap(
+                              child -> child.creatorDescriptor().get().typeElement(),
+                              child -> child)));
 
   /** Returns the child component with the given builder type. */
-  ComponentDescriptor getChildComponentWithBuilderType(XTypeElement builderType) {
-    return Objects.requireNonNull(
+  final ComponentDescriptor getChildComponentWithBuilderType(XTypeElement builderType) {
+    return checkNotNull(
         childComponentsByBuilderType.get().get(builderType),
-        () -> String.format("no child component found for builder type %s",
-            builderType.getQualifiedName()));
+        "no child component found for builder type %s",
+        builderType.getQualifiedName());
   }
 
-  public Set<ComponentDescriptor.ComponentMethodDescriptor> componentMethods() {
-    return componentMethods;
-  }
+  public abstract ImmutableSet<ComponentMethodDescriptor> componentMethods();
 
   /** Returns the first component method associated with this binding request, if one exists. */
   public Optional<ComponentMethodDescriptor> firstMatchingComponentMethod(BindingRequest request) {
     return Optional.ofNullable(firstMatchingComponentMethods().get(request));
   }
 
-  Map<BindingRequest, ComponentMethodDescriptor> firstMatchingComponentMethods() {
-    return firstMatchingComponentMethods.get();
+  @Memoized
+  ImmutableMap<BindingRequest, ComponentMethodDescriptor>
+      firstMatchingComponentMethods() {
+    Map<BindingRequest, ComponentMethodDescriptor> methods = new HashMap<>();
+    for (ComponentMethodDescriptor method : entryPointMethods()) {
+      methods.putIfAbsent(BindingRequest.bindingRequest(method.dependencyRequest().get()), method);
+    }
+    return ImmutableMap.copyOf(methods);
   }
 
-  /** The entry point methods on the component type. Each has a {@link DependencyRequest}. */
-  public Set<ComponentMethodDescriptor> entryPointMethods() {
+  /** The entry point methods on the component type. Each has a {@code DependencyRequest}. */
+  public final ImmutableSet<ComponentMethodDescriptor> entryPointMethods() {
     return componentMethods()
         .stream()
         .filter(method -> method.dependencyRequest().isPresent())
@@ -312,80 +298,51 @@ public final class ComponentDescriptor {
 
   // TODO(gak): Consider making this non-optional and revising the
   // interaction between the spec & generation
-
   /** Returns a descriptor for the creator type for this component type, if the user defined one. */
-  public Optional<ComponentCreatorDescriptor> creatorDescriptor() {
-    return creatorDescriptor;
-  }
+  public abstract Optional<ComponentCreatorDescriptor> creatorDescriptor();
 
   /**
-   * Returns {@code true} for components that have a creator, either because the user {@linkplain
+   * Returns {@code true} for components that have a creator, either because the user {@code
    * #creatorDescriptor() specified one} or because it's a top-level component with an implicit
    * builder.
    */
-  public boolean hasCreator() {
+  public final boolean hasCreator() {
     return !isSubcomponent() || creatorDescriptor().isPresent();
   }
 
-  private final IntSupplier hashCodeCache = memoizeInt(() -> {
-    // TODO(b/122962745): Only use typeElement().hashCode()
-    return Objects.hash(typeElement(), annotation());
-  });
-
+  @Memoized
   @Override
   public int hashCode() {
-    return hashCodeCache.getAsInt();
+    // TODO(b/122962745): Only use typeElement().hashCode()
+    return Objects.hash(typeElement(), annotation());
   }
 
+  // TODO(ronshapiro): simplify the equality semantics
   @Override
-  public boolean equals(Object o) {
-    if (this == o) return true;
-    if (o == null || getClass() != o.getClass()) return false;
-    ComponentDescriptor that = (ComponentDescriptor) o;
-    return annotation.equals(that.annotation) && typeElement.equals(that.typeElement) && dependencies.equals(that.dependencies) && modules.equals(that.modules);
-  }
+  public abstract boolean equals(Object obj);
 
   /** A component method. */
-  public static final class ComponentMethodDescriptor {
-
-    private final XMethodElement methodElement;
-    private final Optional<DependencyRequest> dependencyRequest;
-    private final Optional<ComponentDescriptor> subcomponent;
-
-    private ComponentMethodDescriptor(
-        XMethodElement methodElement,
-        Optional<DependencyRequest> dependencyRequest,
-        Optional<ComponentDescriptor> subcomponent) {
-      this.methodElement = methodElement;
-      this.dependencyRequest = dependencyRequest;
-      this.subcomponent = subcomponent;
-    }
-
+  @AutoValue
+  public abstract static class ComponentMethodDescriptor {
     /** The method itself. Note that this may be declared on a supertype of the component. */
-    public XMethodElement methodElement() {
-      return methodElement;
-    }
+    public abstract XMethodElement methodElement();
 
     /**
      * The dependency request for production, provision, and subcomponent creator methods. Absent
      * for subcomponent factory methods.
      */
-    public Optional<DependencyRequest> dependencyRequest() {
-      return dependencyRequest;
-    }
+    public abstract Optional<DependencyRequest> dependencyRequest();
 
     /** The subcomponent for subcomponent factory methods and subcomponent creator methods. */
-    public Optional<ComponentDescriptor> subcomponent() {
-      return subcomponent;
-    }
+    public abstract Optional<ComponentDescriptor> subcomponent();
 
     /**
-     * Returns the return type of {@link #methodElement()} as resolved in the {@link
+     * Returns the return type of {@code #methodElement()} as resolved in the {@code
      * ComponentDescriptor#typeElement() component type}. If there are no type variables in the
      * return type, this is the equivalent of {@code methodElement().getReturnType()}.
      */
     public TypeMirror resolvedReturnType(DaggerTypes types) {
-      Preconditions.checkState(dependencyRequest().isPresent());
+      checkState(dependencyRequest().isPresent());
 
       XType returnType = methodElement().getReturnType();
       if (isPrimitive(returnType) || isVoid(returnType)) {
@@ -395,76 +352,54 @@ public final class ComponentDescriptor {
           .requestedType(dependencyRequest().get().key().type().java(), types);
     }
 
-    @Override
-    public boolean equals(Object o) {
-      if (this == o) return true;
-      if (o == null || getClass() != o.getClass()) return false;
-      ComponentMethodDescriptor that = (ComponentMethodDescriptor) o;
-      return methodElement.equals(that.methodElement)
-          && dependencyRequest.equals(that.dependencyRequest)
-          && subcomponent.equals(that.subcomponent);
-    }
-
-    @Override
-    public int hashCode() {
-      return Objects.hash(methodElement,
-          dependencyRequest,
-          subcomponent);
-    }
-
-    /** A {@link ComponentMethodDescriptor}builder for a method. */
+    /** A {@code ComponentMethodDescriptor}builder for a method. */
     public static Builder builder(XMethodElement method) {
-      return new Builder(method);
+      return new AutoValue_ComponentDescriptor_ComponentMethodDescriptor.Builder()
+          .methodElement(method);
     }
 
-    /** A builder of {@link ComponentMethodDescriptor}s. */
-    public static final class Builder {
-      private final XMethodElement methodElement;
-      private Optional<DependencyRequest> dependencyRequest = Optional.empty();
-      private Optional<ComponentDescriptor> subcomponent = Optional.empty();
-
-      private Builder(XMethodElement methodElement) {
-        this.methodElement = methodElement;
-      }
+    /** A builder of {@code ComponentMethodDescriptor}s. */
+    @AutoValue.Builder
+    public interface Builder {
+      /** @see ComponentMethodDescriptor#methodElement() */
+      Builder methodElement(XMethodElement methodElement);
 
       /** @see ComponentMethodDescriptor#dependencyRequest() */
-      public Builder dependencyRequest(DependencyRequest dependencyRequest) {
-        this.dependencyRequest = Optional.of(dependencyRequest);
-        return this;
-      }
+      Builder dependencyRequest(DependencyRequest dependencyRequest);
 
       /** @see ComponentMethodDescriptor#subcomponent() */
-      public Builder subcomponent(ComponentDescriptor subcomponent) {
-        this.subcomponent = Optional.of(subcomponent);
-        return this;
-      }
+      Builder subcomponent(ComponentDescriptor subcomponent);
 
       /** Builds the descriptor. */
-      public ComponentDescriptor.ComponentMethodDescriptor build() {
-        if (methodElement == null) {
-          String missing = " methodElement";
-          throw new IllegalStateException("Missing required properties:" + missing);
-        }
-        return new ComponentMethodDescriptor(
-            methodElement,
-            dependencyRequest,
-            subcomponent);
-      }
+      ComponentMethodDescriptor build();
     }
   }
 
-  /** No-argument methods defined on {@link Object} that are ignored for contribution. */
-  private static final Set<String> NON_CONTRIBUTING_OBJECT_METHOD_NAMES =
-      Set.of("toString", "hashCode", "clone", "getClass");
+  /** No-argument methods defined on {@code Object} that are ignored for contribution. */
+  private static final ImmutableSet<String> NON_CONTRIBUTING_OBJECT_METHOD_NAMES =
+      ImmutableSet.of("toString", "hashCode", "clone", "getClass");
 
   /**
    * Returns {@code true} if a method could be a component entry point but not a members-injection
    * method.
    */
-  static boolean isComponentContributionMethod(DaggerElements elements, ExecutableElement method) {
+  static boolean isComponentContributionMethod(XMethodElement method) {
+    return isComponentContributionMethod(toJavac(method));
+  }
+
+  /**
+   * Returns {@code true} if a method could be a component entry point but not a members-injection
+   * method.
+   */
+  static boolean isComponentContributionMethod(ExecutableElement method) {
     return method.getParameters().isEmpty()
         && !method.getReturnType().getKind().equals(VOID)
-        && !elements.getTypeElement(TypeName.OBJECT).equals(method.getEnclosingElement())
+        && !isTypeOf(TypeName.OBJECT, method.getEnclosingElement().asType())
         && !NON_CONTRIBUTING_OBJECT_METHOD_NAMES.contains(method.getSimpleName().toString());
+  }
+
+  /** Returns {@code true} if a method could be a component production entry point. */
+  static boolean isComponentProductionMethod(XMethodElement method) {
+    return isComponentContributionMethod(method) && isFutureType(method.getReturnType());
   }
 }
